--- a/projects.html
+++ b/projects.html
@@ -392,6 +392,7 @@
                     <main id="main" class="site-main">
                         <section class="error-404 not-found">
                             <div class="page-content">
+                                <h2>Bachelor's Degree Projects</h2>
                                 <h3>Letter Recognition</h3>
                                 <h3>Image Processing - BMP - C/C++ </h3>
                                 <div class="d-flex">
@@ -507,6 +508,7 @@
 
 
                 <div class="site-info">Copyright &copy; 2021 Masoud Akhgar <a href="mailto:masoudmdar78@gmail.com">Email</a> | <a href="https://www.linkedin.com/in/masoud-akhgar-5ab344177">Linkedin</a> |
+<a href="https://github.com/masoud-akhgar">Github</a>
                 </div>
                 <!-- .site-info -->
             </div>
