--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
     <div class="w-50 offset-3 mt-5 text-white">
         <h4 class="text-white">Hi There!</h4>
         <p>I am Masoud Akhgar, a Master student of Informatics at the Grenoble-INP. I really appreciate you being here. You can find my interest which is appeared in my researches and projects are done during my bachelor's
-            course on this website. <br></p>
+            course on this website. <br> Last Update: September 2022.</p>
 <br><p>Please follow the links placed in menu to navigate through the site.</p>
     </div>
     <div id="site-generator" class="one">
