--- a/gallery.html
+++ b/gallery.html
@@ -427,10 +427,91 @@
                                         <p>Sep. 2020</p>
                                     </div>
                                 </div>
-                                <div class="d-flex-column  col-4 offset-4">
-                                    <img src="codeforces.jpg" alt="" style="min-height: 200px;max-height: 200px;">
+				<div class="container d-flex">
+                                    <div class="d-flex-column col-5">
+                                        <img src="codeforces.jpg" alt="" style="min-height: 400px;max-height: 400px;">
                                     <p>my profile in <a href="Codeforces.com">Codeforces</a> , train for ACM contest with 131 solved questions.</p>
-                                    <p>Jan. 2019-2018</p>
+                                        <p>Jan. 2019-2018</p>
+                                    </div>
+                                    <div class="d-flex-column  col-5 offset-1">
+                                        <img src="firstshot.jpg" alt="" style="min-height: 400px;max-height: 400px;">
+
+
+                                    </div>
+                                </div>
+<div class="container d-flex">
+                                    <div class="d-flex-column  col-5 offset-1">
+                                        <img src="family.jpg" alt="" style="min-height: 400px;max-height: 400px;">
+
+
+                                    </div>
+<div class="d-flex-column  col-5 offset-1">
+                                        <img src="friends.jpg" alt="" style="min-height: 400px;max-height: 400px;">
+
+
+                                    </div>
+                                </div>
+<br><br><br>
+
+<div class="container d-flex">
+                                    <div class="d-flex-column  col-5 offset-1">
+                                        <img src="ops.jpg" alt="" style="min-height: 400px;max-height: 400px;">
+
+
+                                    </div>
+<div class="d-flex-column  col-5 offset-1">
+                                        <img src="friends2.jpg" alt="" style="min-height: 400px;max-height: 400px;">
+
+
+                                    </div>
+                                </div>
+<br><br><br>
+<div class="container d-flex">
+                                    <div class="d-flex-column  col-5 offset-1">
+                                        <img src="hushang.jpg" alt="" style="min-height: 400px;max-height: 400px;">
+
+
+                                    </div>
+<div class="d-flex-column  col-5 offset-1">
+                                        <img src="miror.jpg" alt="" style="min-height: 400px;max-height: 400px;">
+
+
+                                    </div>
+                                </div>
+<br><br><br>
+<div class="container d-flex">
+                                    <div class="d-flex-column  col-5 offset-1">
+                                        <img src="juj.jpg" alt="" style="min-height: 400px;max-height: 400px;">
+
+
+                                    </div>
+<div class="d-flex-column  col-5 offset-1">
+                                        <img src="buling.JPG" alt="" style="min-height: 400px;max-height: 400px;">
+
+
+                                    </div>
+                                </div>
+<br><br><br>
+<div class="container d-flex">
+                                    <div class="d-flex-column  col-5 offset-1">
+                                        <img src="wow.jpg" alt="" style="min-height: 400px;max-height: 400px;">
+
+
+                                    </div>
+<div class="d-flex-column  col-5 offset-1">
+                                        <img src="cake.jpg" alt="" style="min-height: 400px;max-height: 400px;">
+
+
+                                    </div>
+                                </div>
+				<br><br><br>
+<div class="container d-flex">
+                                    <div class="d-flex-column  col-5 offset-1">
+                                        <img src="futbal.jpg" alt="" style="min-height: 400px;max-height: 400px;">
+
+
+                                    </div>
+
                                 </div>
                             </div>
 
