--- a/gallery.html
+++ b/gallery.html
@@ -446,7 +446,7 @@
 
                                     </div>
 <div class="d-flex-column  col-5 offset-1">
-                                        <img src="friends.jpg" alt="" style="min-height: 400px;max-height: 400px;">
+                                        <img src="friends.JPG" alt="" style="min-height: 400px;max-height: 400px;">
 
 
                                     </div>
