--- a/index.html
+++ b/index.html
@@ -1,4 +1,13 @@
 <!doctype html>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-75PM39HF3B"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-75PM39HF3B');
+</script>
 <html lang="en-US">
 
 <head>
