--- a/gallery.html
+++ b/gallery.html
@@ -511,8 +511,14 @@
 
 
                                     </div>
+<div class="d-flex-column  col-5 offset-1">
+                                        <img src="IMG_20221005_211302.jpg.jpg" alt="" style="min-height: 400px;max-height: 400px;">
 
+
+                                    </div>
                                 </div>
+				    
+
                             </div>
 
 
