--- a/gallery.html
+++ b/gallery.html
@@ -272,6 +272,29 @@
         h6 {
             color: black !important;
         }
+        
+@media  (min-width : 1000px) {
+    .flexclass{
+        display: flex!important;
+    }
+}
+@media (max-width : 1000px) {
+    .flexclass{
+        /* display: flex!important; */
+        display: block;
+    }
+}
+@media (min-width : 1000px) {
+    .offsetclass{
+        max-width: 41.666667%;
+    }
+}
+@media (max-width : 1000px) {
+    .offsetclass{
+        max-width: 80%;
+    }
+}
+
     </style>
     <link rel='stylesheet' id='scapeshot-fonts-css' href='//fonts.googleapis.com/css?family=Poppins::200,300,400,500,600,700,400italic,700italic' type='text/css' media='all' />
     <link rel='stylesheet' id='scapeshot-style-css' href='style.css' type='text/css' media='all' />
@@ -402,50 +425,50 @@
                             <div class="page-content text-center">
 
                                 <br>
-                                <div class="container d-flex">
-                                    <div class="d-flex-column col-5" style="min-height: 300px;max-height: 300px;">
+                                <div class="container flexclass">
+                                    <div class="d-flex-column widthclass" style="min-height: 300px;max-height: 300px;">
                                         <img src="emg4.JPG" alt="">
                                         <p>my picture among hardworking authors of emg application</p>
                                         <p>August 2021</p>
                                     </div>
-                                    <div class="d-flex-column col-5 offset-1" style="min-height: 300px;max-height: 300px;">
+                                    <div class="d-flex-column widthclass offset-1" style="min-height: 300px;max-height: 300px;">
                                         <img src="Screenshot.png" alt="">
                                         <p>my Konkur exams' ranking (1400, among more than 150 thousand students)</p>
                                         <p>July. 2018</p>
                                     </div>
 
                                 </div>
-                                <div class="container d-flex">
-                                    <div class="d-flex-column col-5">
+                                <div class="container flexclass">
+                                    <div class="d-flex-column widthclass">
                                         <img src="Screenshot2.png" alt="" style="min-height: 400px;max-height: 400px;">
                                         <p>training..., every night for ACM International Collegiate Programming Contest (ICPC) </p>
                                         <p>Jan. 2019-2018</p>
                                     </div>
-                                    <div class="d-flex-column  col-5 offset-1">
+                                    <div class="d-flex-column  widthclass offset-1">
                                         <img src="linkedin.jpg" alt="" style="min-height: 400px;max-height: 400px;">
                                         <p>my profile in facebook, linkedin, etc.</p>
                                         <p>Sep. 2020</p>
                                     </div>
                                 </div>
-				<div class="container d-flex">
-                                    <div class="d-flex-column col-5">
+				<div class="container flexclass">
+                                    <div class="d-flex-column widthclass">
                                         <img src="codeforces.jpg" alt="" style="min-height: 400px;max-height: 400px;">
                                     <p>my profile in <a href="Codeforces.com">Codeforces</a> , train for ACM contest with 131 solved questions.</p>
                                         <p>Jan. 2019-2018</p>
                                     </div>
-                                    <div class="d-flex-column  col-5 offset-1">
+                                    <div class="d-flex-column  widthclass offset-1">
                                         <img src="firstshot.jpg" alt="" style="min-height: 400px;max-height: 400px;">
 
 
                                     </div>
                                 </div>
-<div class="container d-flex">
-                                    <div class="d-flex-column  col-5 offset-1">
+<div class="container flexclass">
+                                    <div class="d-flex-column  widthclass offset-1">
                                         <img src="family.jpg" alt="" style="min-height: 400px;max-height: 400px;">
 
 
                                     </div>
-<div class="d-flex-column  col-5 offset-1">
+<div class="d-flex-column  widthclass offset-1">
                                         <img src="friends.JPG" alt="" style="min-height: 400px;max-height: 400px;">
 
 
@@ -453,72 +476,66 @@
                                 </div>
 <br><br><br>
 
-<div class="container d-flex">
-                                    <div class="d-flex-column  col-5 offset-1">
+<div class="container flexclass">
+                                    <div class="d-flex-column  widthclass offset-1">
                                         <img src="ops.jpg" alt="" style="min-height: 400px;max-height: 400px;">
 
 
                                     </div>
-<div class="d-flex-column  col-5 offset-1">
+<div class="d-flex-column  widthclass offset-1">
                                         <img src="friends2.jpg" alt="" style="min-height: 400px;max-height: 400px;">
 
 
                                     </div>
                                 </div>
 <br><br><br>
-<div class="container d-flex">
-                                    <div class="d-flex-column  col-5 offset-1">
+<div class="container flexclass">
+                                    <div class="d-flex-column  widthclass offset-1">
                                         <img src="hushang.jpg" alt="" style="min-height: 400px;max-height: 400px;">
 
 
                                     </div>
-<div class="d-flex-column  col-5 offset-1">
+<div class="d-flex-column  widthclass offset-1">
                                         <img src="miror.jpg" alt="" style="min-height: 400px;max-height: 400px;">
 
 
                                     </div>
                                 </div>
 <br><br><br>
-<div class="container d-flex">
-                                    <div class="d-flex-column  col-5 offset-1">
+<div class="container flexclass">
+                                    <div class="d-flex-column  widthclass offset-1">
                                         <img src="juj.jpg" alt="" style="min-height: 400px;max-height: 400px;">
 
 
                                     </div>
-<div class="d-flex-column  col-5 offset-1">
+<div class="d-flex-column  widthclass offset-1">
                                         <img src="buling.JPG" alt="" style="min-height: 400px;max-height: 400px;">
 
 
                                     </div>
                                 </div>
 <br><br><br>
-<div class="container d-flex">
-                                    <div class="d-flex-column  col-5 offset-1">
+<div class="container flexclass">
+                                    <div class="d-flex-column  widthclass offset-1">
                                         <img src="wow.jpg" alt="" style="min-height: 400px;max-height: 400px;">
 
 
                                     </div>
-<div class="d-flex-column  col-5 offset-1">
+<div class="d-flex-column  widthclass offset-1">
                                         <img src="cake.jpg" alt="" style="min-height: 400px;max-height: 400px;">
 
 
                                     </div>
                                 </div>
 				<br><br><br>
-<div class="container d-flex">
-                                    <div class="d-flex-column  col-5 offset-1">
+<div class="container flexclass">
+                                    <div class="d-flex-column  widthclass offset-1">
                                         <img src="futbal.jpg" alt="" style="min-height: 400px;max-height: 400px;">
 
 
                                     </div>
-<div class="d-flex-column  col-5 offset-1">
-                                        <img src="IMG_20221005_211302.jpg.jpg" alt="" style="min-height: 400px;max-height: 400px;">
 
-
-                                    </div>
                                 </div>
-				    
-
                             </div>
 
 
