--- a/Researches.html
+++ b/Researches.html
@@ -308,7 +308,7 @@
 
 <body style="background-color: white;" class="error404 wp-embed-responsive hfeed fluid-layout navigation-full-screen two-columns-layout content-left excerpt color-scheme-default has-header-media absolute-header has-header-image has-header-text">
 
-
+    
 
     <div id="page" class="site">
         <a class="skip-link screen-reader-text" href="#content">Skip to content</a>
@@ -396,6 +396,21 @@
                 <div id="primary" class="container">
                     <main id="main" class="site-main">
                         <section class="error-404 not-found">
+                            
+                            <div class="page-content ">
+                                <div class="d-flex">
+                                    <div class="col-5">
+                                        <a href="plastics.html">
+                                            <br>
+                                            <h3>Data science Internship</h3>
+                                            <h5>Final cost estimation of plastic parts including tool cost effect with depreciation, using just visible parts features</h5>
+                                            <p>Full description of challenges in submitted paper.</p>
+                                        </a>
+                                    </div>
+                                    <img src="schneider_logo_project.jpg" class="col-5 offset-2" alt="68fd3a24.png" style="max-height: 365px;;">
+                                </div>
+                            </div>
+                            <br><br>
                             <div class="page-content ">
                                 <div class="d-flex">
                                     <div class="col-5">
