--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-75PM39HF3B"></script>
 <script>
+	
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
@@ -469,7 +470,7 @@
 
     <div class="w-50 offset-3 mt-5 text-white">
         <h4 class="text-white">Hi There!</h4>
-        <p>I am Masoud Akhgar, a graduated Master student of Informatics at the Grenoble-INP. I really appreciate you being here. You can find my interest which is appeared in my researches and projects are done during my studying on this website. <br> Last Update: September 2023.</p>
+        <p>I am Masoud Akhgar, a graduated Master student of Informatics at the Grenoble-INP, specified in Data Science. I really appreciate you being here. You can find my interest which is appeared in my researches and projects are done during my studying on this website. <br> Last Update: October 2023.</p>
 <br><p>Please follow the links placed in menu to navigate through the site.</p>
     </div>
     <div id="site-generator" class="one">
