--- a/plastics.html
+++ b/plastics.html
@@ -410,7 +410,7 @@
                                     on the cycle time, the type of press, the hourly rate and the location of production.</p>
                                 <p> - Transport and logistics</p>
                                 <h6>bird overview of pre-processing step</h6>
-                                <img src="processPlastics.JPG" alt="">
+                                <img src="processPlastics2.JPG" alt="">
 
                                 <h5>In this project I was faicng an imbalanced regression problem and the lack of data, so some papars had been read to tackle this problem scientifically. you can see the papers below:</h5>
                                 <div class="d-flex">
