--- a/plastics.html
+++ b/plastics.html
@@ -418,6 +418,7 @@
                                 <img src="paper2plastics.JPG" alt=""class="w-50">
                             </div>
                             <img src="paper3plastics.JPG" alt=""class="w-50">
+                            <img src="all.jpg" alt=""class="w-50">
 
                             <br><br>
                                 <h6>there papers lead me to the following ideas:</h6>
