--- a/plastics.html
+++ b/plastics.html
@@ -428,7 +428,7 @@
                                 <p>this is full result of (traditional and custom) methods reported by mean absolute error percentage <b>MAPE</b> criteria, including imported methods from papers and neural network:</p>
                                 <img src="formulaplastics.JPG" alt="">
                                 <p>LR = linear regression, XGB=XGBoost model, XGB-smote=XGB+SMOGN</p>
-                                <img src="tableplastics.jpg" alt="">
+<!--                                 <img src="tableplastics.jpg" alt=""> -->
                                 
                                 
                                 <p>As 25% in MAPE system is equivalent with 5% in mean square error, the results can be regarded as "<span class="text-success">acceptable</span>" according to their number of records.</p>
