--- a/HOG.html
+++ b/HOG.html
@@ -1,4 +1,13 @@
 <!doctype html>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-PCMPR2M23J"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-PCMPR2M23J');
+</script>
 <html lang="en-US">
 
 <head>
