--- a/plastics.html
+++ b/plastics.html
@@ -437,11 +437,11 @@
                                 <img src="method3plastics.JPG" alt="">
                                 <p>this is full result of (traditional and custom) methods reported by mean absolute error percentage <b>MAPE</b> criteria, including imported methods from papers and neural network:</p>
                                 <img src="formulaplastics.JPG" alt="">
-                                <p>LR = linear regression, XGB=XGBoost model, XGB-smote=XGB+SMOGN</p>
-<!--                                 <img src="tableplastics.jpg" alt=""> -->
+                                <p>LR = linear regression, XGB=XGBoost model, XGB-smote=XGB+SMOGN</p> <h3>results below i in MAPE error system</h3>
+                                <img src="tableplastics.jpg" alt="">
                                 
                                 
-                                <p>As 25% in MAPE system is equivalent with 5% in mean square error, the results can be regarded as "<span class="text-success">acceptable</span>" according to their number of records.</p>
+                                <p>As 25% in <h3>MAPE system is equivalent with 5% in mean square error MSR</h3>, the results can be regarded as "<span class="text-success">acceptable</span>" according to their number of records.</p>
                             </div>
 
                             <p>Thank you sincerely for being with me</p>
