--- a/plastics.html
+++ b/plastics.html
@@ -431,7 +431,7 @@
                                 <img src="tableplastics.jpg" alt="">
                                 
                                 
-                                <p><h5>As 25% in MAPE system<\h5> is equivalent with 5% in mean square error <h5>MSE</h5>, the results can be regarded as "<span class="text-success">acceptable</span>" according to their number of records.</p>
+                                <p><h5>As 25% in MAPE system<\h5> is equivalent with 5% in mean square error <h5>MSE</h5>(in my case), the results can be regarded as "<span class="text-success">acceptable</span>" according to their number of records.</p>
                             </div>
 
                             <p>Thank you sincerely for being with me</p>
