--- a/Researches.html
+++ b/Researches.html
@@ -452,7 +452,20 @@
                                     <img src="insole.jpg" class="col-5 offset-2" alt="68fd3a24.png" style="max-height: 365px;;">
                                 </div>
                             </div>
-
+                            <br><br>
+                            <div class="page-content ">
+                                <div class="d-flex">
+                                    <div class="col-5">
+                                        <a href="DjangoCloud.html">
+                                            <br>
+                                            <h3>Django-Cloud Project</h3>
+                                            <h5>Django - API - Sqlite - MVP model</h5>
+                                            <p>Comparison between two game Sqlite dataset</p>
+                                        </a>
+                                    </div>
+                                    <img src="cloudproject.JPG" class="col-5 offset-2" alt="68fd3a24.png" style="max-height: 365px;;">
+                                </div>
+                            </div>
                             <!-- .page-content -->
                         </section>
                         <!-- .error-404 -->
