--- a/index.html
+++ b/index.html
@@ -469,14 +469,14 @@
 
     <div class="w-50 offset-3 mt-5 text-white">
         <h4 class="text-white">Hi There!</h4>
-        <p>I am Masoud Akhgar, a Master student of Informatics at the Grenoble-INP. I really appreciate you being here. You can find my interest which is appeared in my researches and projects are done during my studying on this website. <br> Last Update: September 2023.</p>
+        <p>I am Masoud Akhgar, a graduated Master student of Informatics at the Grenoble-INP. I really appreciate you being here. You can find my interest which is appeared in my researches and projects are done during my studying on this website. <br> Last Update: September 2023.</p>
 <br><p>Please follow the links placed in menu to navigate through the site.</p>
     </div>
     <div id="site-generator" class="one">
 
 
         <div class="site-info text-white">Copyright &copy; 2021 Masoud Akhgar <a href="mailto:masoudmdar78@gmail.com">Email</a> | <a href="https://www.linkedin.com/in/masoud-akhgar-5ab344177">Linkedin</a> |
-<a href="https://github.com/masoud-akhgar">Github</a> | <a href="CV_September.pdf">CV</a>
+<a href="https://github.com/masoud-akhgar">Github</a> | <a href="CV_October.pdf">CV</a>
         </div>
 
         <!-- .site-info -->
