--- a/EMG.html
+++ b/EMG.html
@@ -406,7 +406,7 @@
                                 <br>
                                 <p>Before developing this application we create a prototype using the python Tkinter library, here is shown: But because python is not as speedy as CPP, we develop our app in c++ language, using QCustomPlot and QWidget libraries
                                     for plotting.</p>
-                                <img src="emg0.jpg" alt="">
+                                <img src="emg0.JPG" alt="">
                                 <br>
                                 <p>Before exploring the application, I should mention that some pages were designed, some filters, all graphic features and pictures in the application provided by me!</p>
                                 <p>Here are some pictures designed:</p>
@@ -418,11 +418,11 @@
 
                                 <h6>Now, EMG application...</h6>
                                 <p>here, you can see a page recording online signals, connecting with python generator.</p>
-                                <img src="emg1.jpg" alt="">
+                                <img src="emg1.JPG" alt="">
                                 <p>Also, you can save and load the charts on the offline page where you can utilize many types of filters.</p>
-                                <img src="emg2.jpg" class="col-11" alt="">
+                                <img src="emg2.JPG" class="col-11" alt="">
                                 <p>Offline page</p>
-                                <img src="emg3.jpg" class="col-11" alt="">
+                                <img src="emg3.JPG" class="col-11" alt="">
                                 <p>all filters that application supports </p>
 
                                 <p>Thank you sincerely for being with me</p>
