--- a/plastics.html
+++ b/plastics.html
@@ -433,7 +433,7 @@
                                 
                                 <p>As 25% in MAPE system is equivalent with 5% in mean square error <h5>MSE</h5>(in my case), the results can be regarded as "<span class="text-success">acceptable</span>" according to their number of records.</p>
                             </div>
-
+				<img src="ComparingIndianprob.png" alt="">
                             <p>Thank you sincerely for being with me</p>
 
 
