--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
     <div id="site-generator" class="one">
 
 
-        <div class="site-info text-white">Copyright &copy; 2021 Masoud Akhgar <a href="mailto:masoudmdar78@gmail.com">Email</a> | <a href="https://www.linkedin.com/in/masoud-akhgar-5ab344177">Linkedin</a> |
+        <div class="site-info text-white">Copyright &copy; 2021 Masoud Akhgar <a href="mailto:masoudmdar78@gmail.com">Email</a> | <a href="https://www.linkedin.com/in/masoud-akhgar-5ab344177">Linkedin</a> | <a href="https://github.com/masoud-akhgar">Github</a> |
         </div>
 
         <!-- .site-info -->
