--- a/plastics.html
+++ b/plastics.html
@@ -402,6 +402,8 @@
                                     the parts based on the data records in hands to allow the non expert like a <b>Designer</b>,
                                     Cost Officer to estimate the cost during earlier phase of the project, using just visible features.
                                 </p>
+				    <br>
+				    <b6>I also developed a platform on which the private usage of the model can be accessable.</b6>
                                 <p>The final cost includes these hidden costs:  </p>
                                 <p> - The Cost of the mold affected by depreciation: It would be calculated by the cost of
                                     the injection machine and the tool life-span.</p>
