--- a/plastics.html
+++ b/plastics.html
@@ -11,7 +11,7 @@
         })(document.documentElement);
     </script>
     <link rel="icon" href="logo2.jpg">
-    <title>Masoud Akhgar</title>
+    <title>Masoud Akhgar - plastics</title>
     <meta name='robots' content='max-image-preview:large' />
     <link rel='dns-prefetch' href='//fonts.googleapis.com' />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
