--- a/embeddedGame.html
+++ b/embeddedGame.html
@@ -404,11 +404,11 @@
                         <section class="error-404 not-found">
                             <div class="page-content">
                                 <br>
-                            <img src="game.JPG" alt="" class="col-4">
-                              <img src="game2.JPG" alt="" class="col-4">
-                              <img src="game3.JPG" alt="" class="col-4">
-                              <img src="game4.png" alt="" class="col-4">
-                              <img src="game5.JPG" alt="" class="col-4">
+                            <img src="game.JPG" alt="">
+                              <img src="game2.JPG" alt="">
+                              <img src="game3.JPG" alt="">
+                              <img src="game4.png" alt="">
+                              <img src="game5.JPG" alt="" >
 
                             <p>Thank you sincerely for being with me</p>
 
