--- a/embeddedGame.html
+++ b/embeddedGame.html
@@ -409,6 +409,7 @@
                               <img src="game3.JPG" alt="">
                               <img src="game4.png" alt="">
                               <img src="game5.JPG" alt="" >
+				    <img src="game6.jpg" alt="" >
 
                             <p>Thank you sincerely for being with me</p>
 
