--- a/projects.html
+++ b/projects.html
@@ -391,7 +391,15 @@
                 <div id="primary" class="container">
                     <main id="main" class="site-main">
                         <section class="error-404 not-found">
-                            
+                             <div class="page-content">
+                                <h3>Letter Recognition</h3>
+                                <h3>Embedded Game Project - C/C++ </h3>
+                                <div class="d-flex">
+                                    <p class="text-white-melo">
+                                    </p>
+                                    <img src="game.JPG" class="col-4" alt="68fd3a24.png">
+                                </div>
+                            </div>
                             <div class="page-content">
                                 <h3>Letter Recognition</h3>
                                 <h3>Image Processing - BMP - C/C++ </h3>
