--- a/embeddedGame.html
+++ b/embeddedGame.html
@@ -410,6 +410,8 @@
                               <img src="game4.png" alt="">
                               <img src="game5.JPG" alt="" >
 				    <img src="game6.jpg" alt="" >
+
+				    <p>one project in which I used Verilog/Vhdl: </p><a href="vhdl.html"></a>
 		<p>"#include stm32f3xx_hal.h
 		"</p><br><p>"
 void initForSevenSeg(){
