--- a/embeddedGame.html
+++ b/embeddedGame.html
@@ -411,7 +411,7 @@
                               <img src="game5.JPG" alt="" >
 				    <img src="game6.jpg" alt="" >
 
-				    <p>one project in which I used Verilog/Vhdl: </p><a href="vhdl.html"></a>
+				    <p>one project in which I used Verilog/Vhdl: </p><a href="vhdl.html">vhdl project</a>
 		<p>"#include stm32f3xx_hal.h
 		"</p><br><p>"
 void initForSevenSeg(){
