--- a/EMG.html
+++ b/EMG.html
@@ -433,6 +433,7 @@
                                 <p>Offline page</p>
                                 <img src="emg3.JPG" class="col-11" alt="">
                                 <p>all filters that application supports </p>
+				    <img src="emg.JPG" class="col-11" alt="">
 
                                 <p>Thank you sincerely for being with me</p>
                             </div>
