--- a/projects.html
+++ b/projects.html
@@ -393,12 +393,13 @@
                         <section class="error-404 not-found">
                              <div class="page-content">
                                 <h3>Letter Recognition</h3>
-                                <h3>Embedded Game Project - C/C++ </h3>
+                                <h3>Embedded Game Project - C/C++ </h3><a href="embeddedGame.html" >
                                 <div class="d-flex">
                                     <p class="text-white-melo">
                                     </p>
+					
                                     <img src="game.JPG" class="col-4" alt="68fd3a24.png">
-                                </div>
+                                </div></a>
                             </div>
                             <div class="page-content">
                                 <h3>Letter Recognition</h3>
