--- a/projects.html
+++ b/projects.html
@@ -391,6 +391,15 @@
                 <div id="primary" class="container">
                     <main id="main" class="site-main">
                         <section class="error-404 not-found">
+							<div class="page-content">
+                                <h3>SoftwareEngineering</h3>
+                                <h3>SoftwareEngineering Project </h3><a href="SoftwareEngineering.html" >
+                                <div class="d-flex">
+                                    <p class="text-white-melo">
+                                    </p>
+                                    <img src="Diagram-preview.jpg" class="col-4" alt="68fd3a24.png">
+                                </div></a>
+                            </div>
                              <div class="page-content">
                                 <h3>Letter Recognition</h3>
                                 <h3>Embedded Game Project - C/C++ </h3><a href="embeddedGame.html" >
@@ -919,3 +928,4 @@ C45.576,13.08,46.321,24.468,41.099,31.431z"/>
 </html>
 
 </html>
+
