--- a/projects.html
+++ b/projects.html
@@ -392,7 +392,7 @@
                     <main id="main" class="site-main">
                         <section class="error-404 not-found">
 							<div class="page-content">
-                                <h3>SoftwareEngineering</h3>
+                                <h3 style="border-bottom: 8px solid #57c4d0;font-size: 24px;display: inline-block;">SoftwareEngineering</h3>
                                 <h3>SoftwareEngineering Project </h3><a href="SoftwareEngineering.html" >
                                 <div class="d-flex">
                                     <p class="text-white-melo">
@@ -401,7 +401,7 @@
                                 </div></a>
                             </div>
                              <div class="page-content">
-                                <h3>Embedded Game Project - C/C++ </h3><a href="embeddedGame.html" >
+                                <h3 style="border-bottom: 8px solid #57c4d0;font-size: 24px;display: inline-block;">Embedded Game Project - C/C++ </h3><a href="embeddedGame.html" >
                                 <div class="d-flex">
                                     <p class="text-white-melo">
                                     </p>
@@ -927,5 +927,6 @@ C45.576,13.08,46.321,24.468,41.099,31.431z"/>
 </html>
 
 </html>
+
 
 
