--- a/projects.html
+++ b/projects.html
@@ -152,6 +152,12 @@
             font-size: .8125em;
             font-style: normal
         }
+
+		.underlined{
+			border-bottom: 3px solid #0000FF;
+			font-size: 18px;
+			display: inline-block;
+		}
         
         .wp-block-quote {
             border-left: .25em solid;
@@ -392,7 +398,7 @@
                     <main id="main" class="site-main">
                         <section class="error-404 not-found">
 							<div class="page-content">
-                                <h3 style="border-bottom: 8px solid #57c4d0;font-size: 24px;display: inline-block;">SoftwareEngineering</h3>
+                                <h3 class="underlined">SoftwareEngineering</h3>
                                 <h3>SoftwareEngineering Project </h3><a href="SoftwareEngineering.html" >
                                 <div class="d-flex">
                                     <p class="text-white-melo">
@@ -401,7 +407,7 @@
                                 </div></a>
                             </div>
                              <div class="page-content">
-                                <h3 style="border-bottom: 8px solid #57c4d0;font-size: 24px;display: inline-block;">Embedded Game Project - C/C++ </h3><a href="embeddedGame.html" >
+                                <h3 class="underlined">Embedded Game Project - C/C++ </h3><a href="embeddedGame.html" >
                                 <div class="d-flex">
                                     <p class="text-white-melo">
                                     </p>
@@ -927,6 +933,7 @@ C45.576,13.08,46.321,24.468,41.099,31.431z"/>
 </html>
 
 </html>
+
 
 
 
